Add foreign key user_id to entries, edit index to show only entries belonging to logged in user

--- a/app/views/entries/index.html.erb
+++ b/app/views/entries/index.html.erb
@@ -1,9 +1,9 @@
 <h1>Welcome to WeightLogger </h1>
     <ul>
-        <% @entries.each do |entry| %>
+        <% current_user.entries.each do |entry| %>
             <li>
-                <%= link_to entry.current_date, entry %>
-                <%= link_to entry.meal_type, entry %>
+                    <%= link_to entry.current_date, entry %>
+                    <%= link_to entry.meal_type, entry %>
             </li>
         <% end %>    
     </ul>
