Validations and error management on new form

--- a/app/views/entries/show.html.erb
+++ b/app/views/entries/show.html.erb
@@ -1,12 +1,12 @@
 <h1> <%= @entry.meal_type %> - <%= @entry.current_date %> </h1>
 
 <h3>Current weight: <%= @entry.current_weight %> kg</h3>
-<h3>Calories: <%= @entry.calories %> calories</h3>
+<h3>Calories: <%= @entry.calories %></h3>
 <h3>Carbohydrates: <%= @entry.carbohydrates %> grams</h3>
 <h3>Fats: <%= @entry.fats%> grams</h3>
 <h3>Proteins: <%= @entry.proteins %> grams</h3>
 
-<%= link_to "Go back", index_path %>
+<%= link_to "Home", index_path %>
 <%= link_to "Edit", edit_entry_path %>
 <%= link_to "Destroy", entry_path(@entry),
                   method: :delete,
