--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-
-  <p class="navbar-text float-right">
+  <p class="navbar-text">
   <% if user_signed_in? %>
     Logged in as <strong><%= current_user.email %></strong>.
     <%= link_to 'Account Management', edit_user_registration_path, :class => 'navbar-link' %> |
