Manually add and edit devise view files

--- a/app/assets/stylesheets/base/global.scss
+++ b/app/assets/stylesheets/base/global.scss
@@ -52,3 +52,16 @@ div.form {
 div {
     padding: 5px;
 }
+
+div.field {
+    text-align:center;
+    padding:5px;
+}
+
+div.actions {
+    text-align:center;
+}
+
+div.shared-link {
+    text-align:center;
+}
